--- a/index.html
+++ b/index.html
@@ -1,13 +1,105 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tranquility Compassion</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/x-icon" href="/icon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary Meta Tags -->
+  <title>Tranquility Compassion | In-Home Care Services in Hamilton, Ontario</title>
+  <meta name="description"
+    content="Tranquility Compassion offers professional in-home care services in Hamilton, Ontario. Services include personal care, companionship, meal preparation, palliative care, medication reminders, and respite care." />
+  <meta name="keywords"
+    content="In-home care Hamilton Ontario, Personal care Hamilton, Companionship services, Meal preparation Hamilton, Palliative care, Respite care, Medication reminder services, Tranquility Compassion Hamilton" />
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="Tranquility Compassion" />
+  <meta name="geo.region" content="CA-ON" />
+  <meta name="geo.placename" content="Hamilton" />
+  <meta name="geo.position" content="43.2520;-79.8697" />
+  <meta name="ICBM" content="43.2520, -79.8697" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Tranquility Compassion | In-Home Care Services in Hamilton, Ontario" />
+  <meta property="og:description"
+    content="Compassionate in-home support including personal care, companionship, meal preparation, palliative and respite care in Hamilton, Ontario." />
+  <meta property="og:image" content="/social-preview.jpg" />
+  <meta property="og:url" content="https://www.tranquilitycompassion.ca/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="en_CA" />
+
+  <!-- Twitter Card -->
+  <!-- <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Tranquility Compassion | Hamilton In-Home Care Services" />
+  <meta name="twitter:description"
+    content="Explore our personal care, companionship, meal prep, palliative care, medication reminders, and respite care services in Hamilton, Ontario." />
+  <meta name="twitter:image" content="/social-preview.jpg" /> -->
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.tranquilitycompassion.ca/" />
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Tranquility Compassion",
+      "url": "https://www.tranquilitycompassion.ca/",
+      "logo": "https://www.tranquilitycompassion.ca/logo.png",
+      "image": "https://www.tranquilitycompassion.ca/social-preview.jpg",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "915-135 James St. South",
+        "addressLocality": "Hamilton",
+        "addressRegion": "ON",
+        "postalCode": "L8P 2Z6",
+        "addressCountry": "Canada"
+      },
+      "telephone": "+1-647-261-2119",
+      "description": "Professional in-home care services in Hamilton, Ontario, including personal care, companionship, meal preparation, palliative care, medication reminders, and respite care.",
+      "areaServed": {
+        "@type": "Place",
+        "name": "Hamilton, Ontario, Canada"
+      },
+      "serviceProvided": [
+        {
+          "@type": "Service",
+          "name": "Personal Care",
+          "description": "Assistance with daily living activities including bathing, dressing, grooming, and mobility support to maintain dignity and independence."
+        },
+        {
+          "@type": "Service",
+          "name": "Companionship",
+          "description": "Meaningful social interaction and emotional support to combat loneliness and improve overall wellbeing."
+        },
+        {
+          "@type": "Service",
+          "name": "Meal Preparation",
+          "description": "Nutritionally balanced meal planning and preparation tailored to dietary needs and personal preferences."
+        },
+        {
+          "@type": "Service",
+          "name": "Palliative Care",
+          "description": "Compassionate support focusing on comfort and quality of life for individuals with serious illnesses."
+        },
+        {
+          "@type": "Service",
+          "name": "Medication Reminder",
+          "description": "Timely reminders and assistance with medication management to ensure proper dosage and schedule adherence."
+        },
+        {
+          "@type": "Service",
+          "name": "Respite Care",
+          "description": "Temporary relief for primary caregivers, providing peace of mind that their loved ones are in capable hands."
+        }
+      ]
+    }
+  </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
