--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://www.tranquilitycompassion.ca/" />
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MKPR36PF7F"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-MKPR36PF7F');
+  </script>
 
   <!-- Structured Data (JSON-LD) -->
   <script type="application/ld+json">
